# DreamCom

./: .gitignore  README.md  architecture.md  demo.py  main.py  pyproject.toml  test_kimi.py
api/: main.py
api/routes/: agents.py  artifacts.py  meetings.py  workspace.py
core/agents/: base.py
core/agents/experts/: engineering.py  product.py  strategy.py
core/artifacts/: registry.py
core/llm/: factory.py  multi_client.py  provider_manager.py  provider_types.py
core/llm/providers/: anthropic_client.py  openai_client.py
core/meetings/: engine.py  phases.py
core/workspace/: state.py
deamcompan/: demo.py  pyproject.toml
deamcompan/api/: main.py
deamcompan/api/routes/: meetings.py  workspace.py
deamcompan/core/agents/: ceo.py
deamcompan/core/agents/experts/: product.py  strategy.py
deamcompan/core/llm/providers/: anthropic_client.py
deamcompan/core/meetings/: engine.py  phases.py
deamcompan/src/deamcompan/api/: main.py
deamcompan/src/deamcompan/api/routes/: agents.py  artifacts.py
deamcompan/src/deamcompan/core/agents/: base.py  bod.py
deamcompan/src/deamcompan/core/agents/experts/: engineering.py
deamcompan/src/deamcompan/core/artifacts/: models.py  store.py
deamcompan/src/deamcompan/core/llm/: base.py  factory.py
deamcompan/src/deamcompan/core/llm/providers/: openai_client.py
deamcompan/src/deamcompan/core/meetings/: types.py
deamcompan/src/deamcompan/core/workspace/: state.py
ui/: index.html
