[project]
name = "deamcompan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.83.0",
    "fastapi>=0.133.0",
    "openai>=2.23.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*"]
